--- a/pages/ppf.html
+++ b/pages/ppf.html
@@ -22,19 +22,23 @@
 
     <nav class="navbar">
         <div class="container nav-wrap">
-            <div class="brand">FinCalc Suite</div>
+            <div class="brand"><span class="brand-icon">💹</span> FinCalc Suite</div>
             <button class="nav-toggle" aria-label="Toggle menu" onclick="document.body.classList.toggle('nav-open')">☰
                 Menu</button>
-            <ul class="nav-links">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="./emi.html">EMI</a></li>
-                <li><a href="./prepayment.html">Prepay</a></li>
-                <li><a href="./sip.html">SIP</a></li>
-                <li><a href="./mutual-fund.html">Mutual Fund</a></li>
-                <li><a href="./fd.html">FD</a></li>
-                <li><a href="./rd.html">RD</a></li>
-                <li><a href="./ppf.html" aria-current="page">PPF</a></li>
-            </ul>
+                        <ul class="nav-links">
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="./emi.html">EMI</a></li>
+        <li><a href="./prepayment.html">Prepay</a></li>
+        <li><a href="./sip.html">SIP</a></li>
+        <li><a href="./step-up-sip.html">Step-Up SIP</a></li>
+        <li><a href="./mutual-fund.html">Mutual Fund</a></li>
+        <li><a href="./fd.html">FD</a></li>
+        <li><a href="./rd.html">RD</a></li>
+        <li><a href="./ppf.html" aria-current="page">PPF</a></li>
+        <li><a href="./inflation.html">Inflation</a></li>
+        <li><a href="./retirement.html">Retirement</a></li>
+        <li><a href="./income-tax.html">Tax</a></li>
+      </ul>
         </div>
     </nav>
 
