--- a/pages/emi.html
+++ b/pages/emi.html
@@ -4,22 +4,23 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>EMI Calculator | FinCalc</title>
-  <meta name="description" content="Home loan EMI calculator with amortization schedule and CSV export.">
-  <meta name="theme-color" content="#4f46e5">
+  <title>EMI Calculator | FinCalc Suite</title>
+  <meta name="description"
+    content="Home loan EMI calculator with amortization schedule, interactive sliders, and visual charts.">
+  <meta name="theme-color" content="#0d9488">
   <link rel="manifest" href="../manifest.webmanifest">
   <link rel="icon" href="../favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="../styles.css">
   <link rel="canonical" href="https://yashpal-0.github.io/Financial-Calculator/pages/emi.html">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="EMI Calculator | FinCalc">
-  <meta property="og:description" content="Home loan EMI calculator with amortization schedule and CSV export.">
+  <meta property="og:title" content="EMI Calculator | FinCalc Suite">
+  <meta property="og:description"
+    content="Calculate home loan EMI with interactive sliders and visual breakdown charts.">
   <meta property="og:url" content="https://yashpal-0.github.io/Financial-Calculator/pages/emi.html">
-  <meta property="og:image" content="https://yashpal-0.github.io/Financial-Calculator/favicon.svg">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
 </head>
 
 <body>
-  <!-- Fixed Controls -->
   <div class="container"
     style="display:flex;justify-content:flex-end;gap:12px;padding-top:12px;position:relative;z-index:100;">
     <button id="installBtn" class="ghost"
@@ -30,7 +31,7 @@
 
   <nav class="navbar">
     <div class="container nav-wrap">
-      <div class="brand">FinCalc Suite</div>
+      <div class="brand"><span class="brand-icon">💹</span> FinCalc Suite</div>
       <button class="nav-toggle" aria-label="Toggle menu" onclick="document.body.classList.toggle('nav-open')">☰
         Menu</button>
       <ul class="nav-links">
@@ -38,34 +39,72 @@
         <li><a href="./emi.html" aria-current="page">EMI</a></li>
         <li><a href="./prepayment.html">Prepay</a></li>
         <li><a href="./sip.html">SIP</a></li>
+        <li><a href="./step-up-sip.html">Step-Up SIP</a></li>
         <li><a href="./mutual-fund.html">Mutual Fund</a></li>
         <li><a href="./fd.html">FD</a></li>
         <li><a href="./rd.html">RD</a></li>
         <li><a href="./ppf.html">PPF</a></li>
+        <li><a href="./inflation.html">Inflation</a></li>
+        <li><a href="./retirement.html">Retirement</a></li>
+        <li><a href="./income-tax.html">Tax</a></li>
       </ul>
     </div>
   </nav>
 
   <header class="page-header container">
-    <h1>EMI Calculator</h1>
-    <p style="color:var(--muted); font-size:18px;">Compute your monthly payments and view a detailed amortization
-      schedule.</p>
+    <h1
+      style="background:var(--accent-gradient);-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text;">
+      EMI Calculator</h1>
+    <p>Compute monthly payments with interactive sliders and a visual breakdown of principal vs. interest.</p>
   </header>
 
   <main>
     <section class="card container">
+      <!-- Loan Amount -->
       <div class="row row-3">
         <div>
-          <label for="loanAmount">Loan Amount</label>
-          <input id="loanAmount" type="number" inputmode="decimal" min="0" step="1000" placeholder="e.g. 5,000,000">
+          <label for="loanAmount">
+            Loan Amount (₹)
+            <span class="label-hint" tabindex="0" aria-label="hint">?<span class="tooltip">Total loan principal from the
+                bank</span></span>
+          </label>
+          <input id="loanAmount" type="number" inputmode="decimal" min="100000" max="100000000" step="50000"
+            placeholder="e.g. 5,000,000">
+          <div class="slider-group">
+            <div class="slider-row">
+              <input type="range" id="loanAmountSlider" min="100000" max="20000000" step="50000" value="5000000">
+              <span class="slider-value" id="loanAmountVal">₹50L</span>
+            </div>
+          </div>
         </div>
         <div>
-          <label for="annualRate">Annual Interest % (APR)</label>
-          <input id="annualRate" type="number" inputmode="decimal" min="0" step="0.01" placeholder="e.g. 8.5">
+          <label for="annualRate">
+            Annual Interest % (APR)
+            <span class="label-hint" tabindex="0" aria-label="hint">?<span class="tooltip">Annual rate charged by the
+                lender</span></span>
+          </label>
+          <input id="annualRate" type="number" inputmode="decimal" min="1" max="30" step="0.1" placeholder="e.g. 8.5">
+          <div class="slider-group">
+            <div class="slider-row">
+              <input type="range" id="annualRateSlider" min="5" max="20" step="0.1" value="8.5">
+              <span class="slider-value" id="annualRateVal">8.5%</span>
+            </div>
+          </div>
         </div>
         <div>
-          <label for="tenureMonths">Tenure (months)</label>
-          <input id="tenureMonths" type="number" inputmode="numeric" min="1" step="1" placeholder="e.g. 240">
+          <label for="tenureMonths">
+            Tenure (months)
+            <span class="label-hint" tabindex="0" aria-label="hint">?<span class="tooltip">Loan duration e.g. 240 = 20
+                years</span></span>
+          </label>
+          <input id="tenureMonths" type="number" inputmode="numeric" min="12" max="360" step="12"
+            placeholder="e.g. 240">
+          <div class="slider-group">
+            <div class="slider-row">
+              <input type="range" id="tenureMonthsSlider" min="12" max="360" step="12" value="240">
+              <span class="slider-value" id="tenureMonthsVal">240 mo</span>
+            </div>
+          </div>
         </div>
       </div>
       <div class="actions">
@@ -75,29 +114,49 @@
     </section>
 
     <section class="container" aria-labelledby="summary-heading" style="margin-top: 24px;">
-      <h2 id="summary-heading" style="margin-bottom: 12px;">Summary Overview</h2>
-      <div class="summary" id="summary" style="margin-top: 0;">
+      <h2 id="summary-heading" class="section-heading">Summary Overview</h2>
+      <div class="summary" id="summary" style="margin-top:0;">
         <div class="kpi">
           <div class="label">Monthly EMI</div>
-          <div class="value highlight" id="emiOut">-</div>
+          <div class="value highlight" id="emiOut">–</div>
         </div>
         <div class="kpi">
           <div class="label">Total Interest</div>
-          <div class="value" id="totalInterestOut">-</div>
+          <div class="value" id="totalInterestOut">–</div>
         </div>
         <div class="kpi">
           <div class="label">Total Payment</div>
-          <div class="value" id="totalPaymentOut">-</div>
+          <div class="value" id="totalPaymentOut">–</div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Donut Chart -->
+    <section class="container chart-section" id="chartSection" style="display:none;">
+      <div class="chart-container">
+        <div class="chart-title">Principal vs. Interest Breakdown</div>
+        <div class="chart-donut-wrap">
+          <canvas id="emiDonutChart" class="chart-donut-canvas" width="220" height="220"></canvas>
+          <div class="chart-legend" id="chartLegend"></div>
+        </div>
+      </div>
+      <div class="tip-card">
+        <span class="tip-icon">💡</span>
+        <div class="tip-content">
+          <h4>Pro Tip</h4>
+          <p>Making even a small prepayment in the first few years can save <strong>lakhs in interest</strong> and
+            reduce your loan tenure significantly. Try our <a href="./prepayment.html"
+              style="color:var(--accent);font-weight:600;">Prepayment Calculator</a> to see the impact.</p>
         </div>
       </div>
     </section>
 
     <section class="table-container container" aria-labelledby="schedule-heading">
       <div
-        style="padding: 24px; display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap;border-bottom: 1px solid var(--glass-border);">
-        <h2 id="schedule-heading" style="margin:0; font-size:20px;">Amortization Schedule</h2>
+        style="padding:24px;display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap;border-bottom:1px solid var(--glass-border);">
+        <h2 id="schedule-heading" style="margin:0;font-size:20px;">Amortization Schedule</h2>
         <div class="actions" style="margin-top:0;">
-          <button id="exportCsvBtn" class="ghost" style="padding:8px 16px; font-size:14px;">Download CSV ⬇️</button>
+          <button id="exportCsvBtn" class="ghost" style="padding:8px 16px;font-size:14px;">Download CSV ⬇️</button>
         </div>
       </div>
       <div class="scroll-x">
@@ -107,8 +166,8 @@
               <th class="left"># Month</th>
               <th>Opening Bal</th>
               <th>EMI Paid</th>
-              <th>Interest Component</th>
-              <th>Principal Component</th>
+              <th>Interest</th>
+              <th>Principal</th>
               <th>Closing Bal</th>
             </tr>
           </thead>
@@ -120,12 +179,25 @@
 
   <footer>
     <div class="container">
-      <div>✨ Built for everyone. Works offline in your browser.</div>
-      <div style="margin-top: 12px;">Crafted with passion. Connect on <a
+      <div>✨ Built for everyone. Works offline. No data collection, tracking, or ads.</div>
+      <div style="margin-top:12px;">Crafted with passion. Connect on <a
           href="https://www.linkedin.com/in/yashpal-yadav-990278221/" target="_blank" rel="me noopener">LinkedIn</a>
       </div>
     </div>
   </footer>
+
+  <!-- Sticky Result Bar -->
+  <div class="sticky-result" id="stickyResult">
+    <div>
+      <div class="sr-label">Monthly EMI</div>
+      <div class="sr-value" id="stickyEmi">–</div>
+    </div>
+    <div>
+      <div class="sr-label">Total Interest</div>
+      <div class="sr-value" id="stickyInterest">–</div>
+    </div>
+    <button class="sr-dismiss" id="stickyDismiss">✕</button>
+  </div>
 
   <script type="module">
     import { initApp } from '../scripts/app.js';
